frontend/test/should_pass/pattern_002.grg
pattern P(x:Node) {
	x -e:Edge-> y:Node;
}

pattern Q(-e:Edge->) {
	x:Node <-e- y;
	y:Node;
}

test t {
	x:Node;
	y:Node;
	x -e:Edge-> y;
	a:Node;
	b:Node;
	a <-f:Edge- b;
}
