frontend/test/should_fail/edge_into_neg_004.grg
test t {
	-e:Edge->a:Node;
	negative {
		x:Node-e->y:Node;
	}
}
